Changes to be committed:

--- a/accounts/templates/change-password.html
+++ b/accounts/templates/change-password.html
@@ -6,7 +6,7 @@
     <div class="global-container">
         <div class="card login-form">
         <div class="card-body">
-            <h3 class="card-title text-center">Log in to Django</h3>
+            <h3 class="card-title text-center">Change Your Password</h3>
             {% if messages %}
 
             {% for message in messages %}
@@ -23,19 +23,18 @@
                     {% csrf_token %}
                     <!-- to error: add class "has-danger" -->
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Username</label>
-                        <input type="text" name="username" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <label for="exampleInputEmail1">Password</label>
+                        <input type="text" name="new_password" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <a href="{% url 'ChangePassword' %}"style="float:right;font-size:12px;">Forgot password?</a>
-                        <input type="password" name="password" class="form-control form-control-sm" id="exampleInputPassword1">
+                        <label for="exampleInputPassword1">Re Confirm Password</label>
+                        
+                        <input type="password" name="reconfirm_password" class="form-control form-control-sm" id="exampleInputPassword1">
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                    <input type="hidden" name="user_id" value="{{user_id}}">
+                    <button type="submit" class="btn btn-primary btn-block">Submit</button>
                     
-                    <div class="sign-up">
-                        Don't have an account? <a href="{% url 'register_attempt' %}">Create One</a>
-                    </div>
+                   
                 </form>
             </div>
         </div>
