--- a/accounts/templates/forget-password.html
+++ b/accounts/templates/forget-password.html
@@ -6,7 +6,7 @@
     <div class="global-container">
         <div class="card login-form">
         <div class="card-body">
-            <h3 class="card-title text-center">Log in to Django</h3>
+            <h3 class="card-title text-center">Forget Password</h3>
             {% if messages %}
 
             {% for message in messages %}
@@ -26,16 +26,10 @@
                         <label for="exampleInputEmail1">Username</label>
                         <input type="text" name="username" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <a href="{% url 'ChangePassword' %}"style="float:right;font-size:12px;">Forgot password?</a>
-                        <input type="password" name="password" class="form-control form-control-sm" id="exampleInputPassword1">
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block">Sign in</button>
                     
-                    <div class="sign-up">
-                        Don't have an account? <a href="{% url 'register_attempt' %}">Create One</a>
-                    </div>
+                    <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                    
+                   
                 </form>
             </div>
         </div>
