--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -37,7 +37,7 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" name="password" class="form-control form-control-sm" id="exampleInputPassword1">
                     </div>
-                    <a href="#" style="float:right;font-size:12px;">Forgot password?</a>
+                    <a href="{% url 'forget_password'%}" style="float:right;font-size:12px;">Forgot password?</a>
 
                     <button type="submit" class="btn btn-primary btn-block mt-2">Sign in</button>
                     
