--- a/accounts/templates/change-password.html
+++ b/accounts/templates/change-password.html
@@ -24,7 +24,7 @@
                     <!-- to error: add class "has-danger" -->
                     <div class="form-group">
                         <label for="exampleInputEmail1">Password</label>
-                        <input type="text" name="new_password" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="password" name="new_password" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Re Confirm Password</label>
