--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -37,6 +37,10 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" name="password" class="form-control form-control-sm" id="exampleInputPassword1">
                     </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Repeat Password</label>
+                        <input type="password" name="repeat_password" class="form-control form-control-sm" id="exampleInputPassword1">
+                    </div>
                     <a href="{% url 'forget_password'%}" style="float:right;font-size:12px;">Forgot password?</a>
 
                     <button type="submit" class="btn btn-primary btn-block mt-2">Sign in</button>
